--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
-    font-family: "Roboto", serif;
-    color: #2e2f42;
+    font-family: "Roboto", sans-serif;
+    color: #434455;
+    background-color: #FFFFFF;
 }
 
 button {
@@ -25,7 +26,7 @@ ul {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
         font-size: 18px;
-        line-height: 1.16667;
+        line-height: 1.17;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #4d5ae5;
@@ -49,11 +50,12 @@ ul {
         color: #2e2f42;
 }
 
-.navigation-list-item:hover {
+.navigation-list-link:hover,
+.navigation-list-link:focus {
     color: #404bbf;
 }
 
-.adress-list-item {
+.adress-list-link {
     font-weight: 400;
         font-size: 16px;
         line-height: 1.5;
@@ -61,8 +63,8 @@ ul {
         color: #434455;
 }
 
-.adress-list-item:hover,
-.adress-list-item:focus {
+.adress-list-link:hover,
+.adress-list-link:focus {
     color: #404bbf;
 }
 
@@ -73,33 +75,29 @@ ul {
 .hero-title {
     font-weight: 700;
         font-size: 56px;
-        line-height: 1.07143;
+        line-height: 1.07;
         letter-spacing: 0.02em;
         text-align: center;
         color: #fff;
 }
 
 .hero-button {
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.04em;
         color: #fff;
-        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
         background-color: #4d5ae5;
-        border-radius: 4px;
-            padding: 16px 32px;
-            width: 169px;
-            height: 56px;
-            display: flex;
-                align-items: flex-start;
-                justify-content: flex-start;
-                flex-direction: row;
-                gap: 10px;
 }
 
-.hero-button:hover {
+.hero-button:hover,
+.hero-button:focus {
     background-color: #404bbf;
+}
+
+.advantages-title{
+    color:#2e2f42;
 }
 
 .advantages-list-item {
@@ -123,9 +121,10 @@ ul {
 .team-title {
     font-weight: 700;
         font-size: 36px;
-        line-height: 1.11111;
+        line-height: 1.11;
         letter-spacing: 0.02em;
         text-align: center;
+        text-transform: capitalize;
 }
 
 .team-subtitle {
@@ -136,18 +135,23 @@ ul {
         text-align: center;
 }
 
+.team-list-item {
+    background-color: #FFFFFF;
+}
 .team-list-item-text {
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         text-align: center;
+        color: #434455;
 }
  .portfolio-title {
     font-weight: 700;
         font-size: 36px;
-        line-height: 1.11111;
+        line-height: 1.11;
         letter-spacing: 0.02em;
         text-align: center;
+        text-transform: capitalize;
  }
 
  .portfolio-subtitle {
@@ -164,7 +168,7 @@ ul {
         color: #434455;
  }
 
- footer {
+ .footer {
     background-color: #2e2f42;
  }
 
@@ -177,5 +181,6 @@ ul {
 
  .footer-studio {
     color: #f4f4fd;
+    line-height: 1.17
  }
 
