--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ ul {
     background-color: #404bbf;
 }
 
-.advantages-title{
+.advantages-title {
     color:#2e2f42;
 }
 
@@ -112,6 +112,7 @@ ul {
         font-size: 20px;
         line-height: 1.2;
         letter-spacing: 0.02em;
+        color: #2e2f42;
 }
 
 .team {
@@ -125,6 +126,7 @@ ul {
         letter-spacing: 0.02em;
         text-align: center;
         text-transform: capitalize;
+        color: #2e2f42;
 }
 
 .team-subtitle {
@@ -133,6 +135,7 @@ ul {
         line-height: 1.2;
         letter-spacing: 0.02em;
         text-align: center;
+        color: #2e2f42;
 }
 
 .team-list-item {
@@ -152,6 +155,7 @@ ul {
         letter-spacing: 0.02em;
         text-align: center;
         text-transform: capitalize;
+        color: #2e2f42;
  }
 
  .portfolio-subtitle {
@@ -159,6 +163,7 @@ ul {
         font-size: 20px;
         line-height: 1.2;
         letter-spacing: 0.02em;
+        color:#2e2f42;
  }
 
  .portfolio-list-item-text {
